feat: Enhance gRPC user authentication and exception handling with custom user details and improved security checks